2.5?
    - Added possibility for custom export filters to define their own name formatters.
      This is done by adding a file named "<filtername>.formatters". This file defines
      one formatter on each line, with each line containing the name of the formatter and
      the formatter definition, separated by a colon (:).
2.4 - Added mappings for some special characters that need to be sanitized when generating
      BibTeX keys.
    - Added ACM Digital Library fetcher by Aaron Chen.
    - Added new entry types (conference, patent, standard, electronic).
    - Improvements to IEEEXplore fetcher.
    - Added explanatory text to indicate that "ps" and "pdf" files are legacy features.
    - Fixed unexpected behaviour of "Open PDF or PS" menu item - now looks in "file" field,
      and does not launch search for external files.
    - Fixed bug 1827568: 'Save database' might not store current edit in entry editor.
    - Fixed bug 2027944: updating custom export definitions requires restart.
2.4b2
    - Opening external files on Linux now uses "xdg-open" as application if no other is specified
      for the file type. xdg-open should be available to call the appropriate application according
      to the user's settings on all freedesktop compliant Linux distributions.
    - Download external file now attempts to determine file type based on MIME type, using
      file extension as fallback.
    - Changed the way names are handled under autocompletion. Last and first names are
      now indexed separately.
    - A table column can now be set up with fallback fields used if the main field is
      empty. Fallback fields are set in Options -> Preferences -> Main table columns by
      setting a column to "field1/field2/...". The fields will be checked in succession
      until a non-empty value has been found or al fields have been checked. For instance,
      specifying "author/editor" will result in a column displaying the author field where,